--- a/Home/Home.html
+++ b/Home/Home.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 
-<body style="background-image:url(&quot;../assets/img/19874 wallpaper.png&quot;);">
+<body style="background-image:url(&quot;../assets/img/19874 wallpaper.png&quot;);background-position:center;background-repeat:no-repeat;">
     <header></header>
     <footer></footer>
     <footer></footer>
