--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
       </div>
     </section>
-    <section class="skrollable u-align-center u-clearfix u-image u-section-2" id="carousel_45a2" data-image-width="1280" data-image-height="745">
+    <section class="skrollable u-align-center u-clearfix u-image u-parallax u-section-2" id="carousel_45a2" data-image-width="1280" data-image-height="745">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-clearfix u-gutter-18 u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
