--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="u-layout-row">
               <div class="u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-left-cell u-size-29 u-layout-cell-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
-                  <h5 class="u-text u-text-1">about company</h5>
+                  <h5 class="u-text u-text-1" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">about company</h5>
                   <h1 class="u-custom-font u-font-oswald u-text u-text-2" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="Down">Brand Strategy</h1>
                   <p class="u-text u-text-3">Pharetra convallis posuere morbi leo. Tellus mauris a diam maecenas sed enim. Orci a scelerisque purus semper eget duis at. Sit amet aliquam id diam. Suspendisse ultrices gravida dictum fusce ut placerat. </p>
                   <p class="u-text u-text-4">Image from <a href="https://www.freepik.com/photos/people" class="u-active-none u-border-1 u-border-white u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-1">Freepik</a>
