--- a/ֆքǟʀɖɛʋ.html
+++ b/ֆքǟʀɖɛʋ.html
@@ -37,7 +37,7 @@
     <meta name="theme-color" content="#7d20d3">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="ֆքǟʀɖɛʋ.html" data-home-page-title="ֆքǟʀɖɛʋ" class="u-body"><header class="u-clearfix u-header u-palette-4-light-3 u-sticky u-header" id="sec-d045"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-header u-palette-4-light-3 u-sticky u-header" id="sec-d045"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700;">
             <a class="u-button-style u-custom-border u-custom-border-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" style="padding: 4px 16px; font-size: calc(1em + 8px);">
